started implementation of white move

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set(Sources
   bauern.cpp
   Node.cpp
   Tree.cpp
+  Utils.cpp
 )
 add_executable(${This} ${Sources} ${Headers})
 add_library(${Lib} STATIC ${Sources} ${Headers})
